2064 fixed the gap diffrence for ipad pro

--- a/blocks/drivetrain-switch/drivetrain-switch.css
+++ b/blocks/drivetrain-switch/drivetrain-switch.css
@@ -416,7 +416,7 @@
     .drivetrain-switch-block .dts-right-tech-detail {
         margin: 1rem 0 0;        
         flex-flow: row wrap;
-        gap: 2rem 2.5rem;
+        gap: 1.5rem 2rem;
         width: auto;
         align-self: center;
         display: flex;
@@ -634,7 +634,7 @@
     .drivetrain-switch-block .dts-tech-detail-table tbody {        
         display: flex;
         flex-flow: row wrap;
-        gap: 2rem 2.5rem;
+        gap: 1.5rem 2rem;
     }
 
     .drivetrain-switch-block .dts-tech-detail-table tr {
@@ -669,6 +669,7 @@
     .drivetrain-switch-block .dts-right-tech-detail {
         margin: 1.25rem auto 0;
         max-width: 45.75rem;
+        gap: 2rem 2.5rem;
     }
 
     .drivetrain-switch-block .disclaimer-content {
@@ -692,6 +693,9 @@
 
     .drivetrain-switch-block .dts-model-category-container.selected .dts-category-box {
         padding: 0.875rem;
+    }
+    .drivetrain-switch-block .dts-tech-detail-table tbody{
+        gap: 2rem 2.5rem;
     }
 }
 
